adding queue features

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ navbar: false
     <div class="one-half column" style="margin-top: 25%">
       <h2>PostLater</h2>
       <p>Schedule your social media posts / Engage your audience / Increase post reach / Sit back and relax</p>
-      <button onclick="login();">
+      <button onclick="signIn();">
         Log in with facebook
       </button>
     </div>
