clear form after submission

--- a/panel.html
+++ b/panel.html
@@ -125,6 +125,8 @@ function formSubmit() {
       message: message
     }).then(function() {
       //window.location.href = '/done';
+      form.delay.value = '';
+      form.message.value = '';
     }).catch(function(err) {
       alert(err);
     });
